--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="main-nav">
        <a href="#" class="logo">
-            <img src="atech.png" alt="ATECH Logo">
+            <img src="atech.PNG" alt="ATECH Logo">
             <span>ATECH Cybersécurité</span>
         </a>
         
