--- a/contact.html
+++ b/contact.html
@@ -166,5 +166,11 @@
             &copy; 2025 ATECH IT Solutions. Tous droits réservés.
         </div>
     </footer>
+    <script>
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+    this.classList.toggle('active');
+    document.querySelector('.nav-links').classList.toggle('active');
+});
+    </script>
 </body>
 </html>
