--- a/team.html
+++ b/team.html
@@ -138,6 +138,11 @@
     <script>
         lucide.createIcons();
         document.querySelector('.nav-link.active').classList.add('active');
+
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+    this.classList.toggle('active');
+    document.querySelector('.nav-links').classList.toggle('active');
+});
     </script>
 </body>
 </html>
