--- a/services.html
+++ b/services.html
@@ -392,6 +392,10 @@
     <script>
         lucide.createIcons();
         document.querySelector('.nav-link.active').classList.add('active');
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+    this.classList.toggle('active');
+    document.querySelector('.nav-links').classList.toggle('active');
+});
     </script>
 </body>
 </html>
