--- a/index.html
+++ b/index.html
@@ -203,20 +203,21 @@
             <div class="footer-col">
                 <h3>Services</h3>
                 <ul class="footer-links">
-                    <li><a href="services.html#cybersecurite"><i data-lucide="chevron-right"></i> Cybersécurité</a></li>
-                    <li><a href="services.html#securite-physique"><i data-lucide="chevron-right"></i> Sécurité physique</a></li>
-                    <li><a href="services.html#formation"><i data-lucide="chevron-right"></i> Formations</a></li>
-                    <li><a href="services.html#materiel"><i data-lucide="chevron-right"></i> Matériel de sécurité</a></li>
+                    <li><a href="services.html"><i data-lucide="chevron-right"></i>Services</a></li>
                 </ul>
             </div>
             
             <div class="footer-col">
                 <h3>Entreprise</h3>
                 <ul class="footer-links">
-                    <li><a href="about.html"><i data-lucide="chevron-right"></i> À propos</a></li>
-                    <li><a href="team.html"><i data-lucide="chevron-right"></i> Équipe</a></li>
-                    <li><a href="#"><i data-lucide="chevron-right"></i> Carrières</a></li>
-                    <li><a href="blog.html"><i data-lucide="chevron-right"></i> Blog</a></li>
+                   <a href="index.html" class="nav-link active">Accueil</a>
+            <a href="services.html" class="nav-link">Services</a>
+            <a href="about.html" class="nav-link">À propos</a>
+            <a href="team.html" class="nav-link">Équipe</a>
+            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="Nous.html" class="nav-link">Nous</a>
+            <a href="blog.html" class="nav-cta">Blog</a>
+            <button class="menu-toggle" aria-label="Toggle menu">
                 </ul>
             </div>
             
