--- a/about.html
+++ b/about.html
@@ -216,10 +216,14 @@
             <div class="footer-col">
                 <h3>Entreprise</h3>
                 <ul class="footer-links">
-                    <li><a href="about.html"><i data-lucide="chevron-right"></i> À propos</a></li>
-                    <li><a href="team.html"><i data-lucide="chevron-right"></i> Équipe</a></li>
-                    <li><a href="#"><i data-lucide="chevron-right"></i> Carrières</a></li>
-                    <li><a href="blog.html"><i data-lucide="chevron-right"></i> Blog</a></li>
+                     <a href="index.html" class="nav-link active">Accueil</a>
+            <a href="services.html" class="nav-link">Services</a>
+            <a href="about.html" class="nav-link">À propos</a>
+            <a href="team.html" class="nav-link">Équipe</a>
+            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="Nous.html" class="nav-link">Nous</a>
+            <a href="blog.html" class="nav-cta">Blog</a>
+            <button class="menu-toggle" aria-label="Toggle menu">
                 </ul>
             </div>
             
