--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog | ATECH Cybersécurité</title>
+    <title>Blog | ATECH-CYBERSECURITE</title>
      <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Times+New+Roman:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
     <nav class="main-nav">
        <a href="#" class="logo">
             <img src="atech.PNG" alt="ATECH Logo">
-            <span>ATECH Cybersécurité</span>
+            <span>ATECH-CYBERSECURITE</span>
         </a>
         
        <div class="nav-links">
