--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <nav class="main-nav">
         <a href="index.html" class="logo">
             <img src="atech.PNG" alt="ATECH Logo">
-            <span>ATECH Cybersécurité</span>
+            <span>ATECH-CYBERSECURITE</span>
         </a>
         
          <div class="nav-links">
