--- a/index.html
+++ b/index.html
@@ -396,6 +396,9 @@
                 document.querySelector('.nav-links').classList.toggle('active');
             });
         });
+        function toggleSidebar() {
+    document.getElementById("sidebar").classList.toggle("active");
+}
     </script>
 </body>
 </html>
