--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
                     Services <i data-lucide="chevron-down" class="dropdown-icon"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="services.html#cybersecurite">Cybersécurité</a>
-                    <a href="services.html#securite-physique">Sécurité physique</a>
-                    <a href="services.html#formation">Formation</a>
-                    <a href="services.html#materiel">Matériel</a>
+                      
+            <a href="about.html" class="nav-link">À propos</a>
+            <a href="team.html" class="nav-link">Équipe</a>
+            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="Nous.html" class="nav-link">Nous</a>
+            <a href="blog.html" class="nav-cta">Blog</a>
                 </div>
             </div>
             
